# SecureClipGaurd

./: .replit  README.md  clipboard_monitor.py  encryption.py  key_manager.py  main_window.py  notification.py  pyproject.toml  replit.nix  secure_clipboard.py  system_tray.py  utils.py
attached_assets/: Pasted--1-Project-Overview-This-project-is-a-Secure-Clipboard-Encryption-Software-that-runs-in-the-backg-1739701994817.txt
